--- a/.github/workflows/main_game-deals.yml
+++ b/.github/workflows/main_game-deals.yml
@@ -27,7 +27,7 @@ jobs:
           npm run build --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip release.zip . -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
@@ -50,6 +50,9 @@ jobs:
 
       - name: unzip artifact for deployment
         run: unzip release.zip
+
+      - name: remove release.zip file
+        run: rm release.zip
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
