--- a/package.json
+++ b/package.json
@@ -21,26 +21,26 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/axios": "0.0.8",
+    "@nestjs/axios": "^3.0.0",
     "@nestjs/cache-manager": "^2.0.0",
-    "@nestjs/common": "^9.4.1",
-    "@nestjs/core": "^9.4.1",
-    "@nestjs/platform-express": "^8.0.0",
-    "cache-manager": "^4.1.0",
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.2",
+    "cache-manager": "^5.2.3",
     "cheerio": "^1.0.0-rc.12",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
+    "rimraf": "^5.0.1",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.3.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/cli": "^10.0.3",
+    "@nestjs/schematics": "10.0.1",
+    "@nestjs/testing": "^10.0.2",
     "@types/cache-manager": "^4.0.2",
     "@types/cheerio": "^0.22.31",
     "@types/express": "^4.17.17",
     "@types/jest": "^27.0.1",
-    "@types/node": "^16.18.36",
+    "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
