--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "axios": "^1.4.0",
     "cache-manager": "^5.2.3",
     "cheerio": "^1.0.0-rc.12",
     "reflect-metadata": "^0.1.13",
