--- a/.github/workflows/main_game-deals.yml
+++ b/.github/workflows/main_game-deals.yml
@@ -21,19 +21,17 @@ jobs:
         with:
           node-version: '16.x'
 
-      - name: npm install and build
+      - name: npm install, build, and test
         run: |
           npm install
           npm run build --if-present
-
-      - name: Zip artifact for deployment
-        run: zip release.zip . -r
+          npm run test --if-present
 
       - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: release.zip
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
@@ -48,26 +46,11 @@ jobs:
         with:
           name: node-app
 
-      - name: unzip artifact for deployment
-        run: unzip release.zip
-
-      - name: remove release.zip file
-        run: rm release.zip
-
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'game-deals'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AzureAppService_PublishProfile_919687269506459187b54b26819d4ee5 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_E29F56C12BFA47B680B274F4B6824CFD }}
           package: .
-
-  delete-artifacts:
-    runs-on: ubuntu-latest
-    needs: deploy
-    steps:
-      - uses: kolpav/purge-artifacts-action@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          expire-in: 0days
