--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "game-deals",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "",
-  "author": "",
+  "author": "Mohamed Amgd",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "GPL-3.0",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
