--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/axios": "^3.0.0",
     "@nestjs/cache-manager": "^2.0.0",
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "axios": "^1.4.0",
@@ -40,22 +41,22 @@
     "@types/cache-manager": "^4.0.2",
     "@types/cheerio": "^0.22.31",
     "@types/express": "^4.17.17",
-    "@types/jest": "^27.0.1",
+    "@types/jest": "^29.5.0",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^4.28.2",
-    "@typescript-eslint/parser": "^4.28.2",
-    "eslint": "^7.30.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "jest": "^27.0.6",
+    "jest": "^29.7.0",
     "prettier": "^2.8.8",
     "supertest": "^6.3.3",
-    "ts-jest": "^27.0.3",
+    "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^3.14.2",
-    "typescript": "^4.9.5"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
